# rank-predictor

./: LICENSE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
examples/: .gitignore  annotated-data.example.csv  config.example.toml  test-data.example.csv  training-data.example.csv
src/rank_predictor/: __init__.py  application.py  convert.py  model.py  predict.py  rank.py  split.py  train.py  types.py  validate.py  validator.py
