[project]
name = "rank-predictor"
version = "0.1.0"
description = "Tools to predict expected final rank in Japanese mahjong"
authors = [
    { name = "Apricot S." }
]
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "defusedxml>=0.7.1",
]

[project.scripts]
rank-predictor-convert = "rank_predictor.application:convert"
rank-predictor-split = "rank_predictor.application:split"
rank-predictor-train = "rank_predictor.application:train"
rank-predictor = "rank_predictor.application:predict"

[project.urls]
Repository = "https://github.com/Apricot-S/rank-predictor.git"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "typing" },
]
lint = [
    "ruff>=0.13.0,<0.14",
]
typing = [
    "mypy>=1.18.1,<2",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C901",    # complex-structure
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "PLC0415", # import-outside-top-level
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "defusedxml",
]
ignore_missing_imports = true
